# django-sphinx-docs

./: CHANGELOG.md  README.md  justfile  noxfile.py  pyproject.toml
.github/workflows/: publish.yml
docs/: conf.py
example/example/: settings.py  urls.py
src/django_sphinx_docs/: __init__.py  conf.py  urls.py  views.py
tests/: runtests.py  settings.py  test_views.py  urls.py
