[project]
name = "django-sphinx-docs"
version = "0.3.3"
description = "Allows to serve Sphinx generated docs from django."
authors = [
    { name = "Evgeny Demchenko", email = "little_pea@list.ru" },
]
license = { text = "BSD" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Django>=3.2",
]
classifiers = [
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/littlepea/django-docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_sphinx_docs"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "ruff>=0.1.0",
    "ty>=0.0.17",
    "nox>=2023.4.22",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "S", "BLE", "A", "C4", "T20", "PT", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "PERF", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "PT009", "PT027", "PTH", "ARG", "N", "ERA", "E402", "S105", "S106"]
"example/*" = ["S101", "PTH", "E501", "F401", "S105", "S106"]
"sphinx-docs/*" = ["ERA001", "E501", "A001"]
"src/django_sphinx_docs/views.py" = ["PLR2004", "S101"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = [".", "src", "example"]
testpaths = ["tests"]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.ty]
# Add ty configuration if needed
